# mystic-forge

./: README.md  main.py  pyproject.toml
data/processed/: cards_clean.csv
data/raw/: cards_seed.csv
data/synthetic/: cards_synthetic.csv
notebooks/: exploration.ipynb
output/: synth_no_stats.pkl  synth_with_stats.pkl  synthesizer.pkl
src/: fetch_cards.py  logger.py
src/mystic_forge/: logger.py  pipeline.py  run.py
src/mystic_forge/stages/: fetch.py  fetch_cards.py  preprocess.py  sample.py  train.py  validate.py
