[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mystic-forge"
version = "0.0.1"
description = "Synthetic trading card data generation experiments in Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]

[project.scripts]
mystic-forge = "mystic_forge.run:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
